--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,9 @@
 </head>
 
 <body class="animate_animated animate_fadeIn">
-    <div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar" *ngIf="!sessionExists; else sessionExisting">
-        <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
+    <div fxLayout="row" fxLayoutAlign="center center" *ngIf="!sessionExists; else sessionExisting" style=" height: 100vh;">
+        <div fxLayout="column" fxFlex="100" fxLayoutAlign="center center">
+        <mat-card class="pure-u-1-3 mat_card" fxFlex="25" style="width: 400px;margin-top: 90px;">
             <div class="pure-u-1 animate__animated animate__fadeIn animate__fast" id="header">
                 <h1 class="animate_animated animate_delay-1s">Login</h1>
             </div>
@@ -26,6 +27,13 @@
                 </div>
             </form>
         </mat-card>
+        <div fxLayout="column" fxLayoutAlign="center center" fxFlex="25" style="margin-top: 30px;">
+            <p style="color:white;font-size: x-large;">Or</p>
+            <button class="pure-button button-success" routerLink="/register" 
+            style="background-color: transparent;color:lightseagreen;font-weight:500;font-size: 20px;margin-top: 10px;text-decoration: underline;">
+                Register as a new user</button>
+        </div>
+    </div>
     </div>
     <ng-template #sessionExisting>
         <div fxLayoutAlign="center center" fxFlexFill>
