--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,47 +4,70 @@
 </head>
 
 <body class="animate_animated animate_fadeIn">
-    <div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar">
-        <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
-            <div class="pure-u-1 animate__animated animate__fadeIn animate__fast" id="header">
-                <h1 class="animate_animated animate_delay-1s">Signup</h1>
+    <div fxLayout="row" fxLayoutAlign="center center" *ngIf="!sessionExists; else sessionExisting"
+        style=" height: 100vh;">
+        <div fxLayout="column" fxFlex="100" fxLayoutAlign="center center">
+            <mat-card class="pure-u-1-3 mat_card" fxFlex="25" style="width: 400px;margin-top: 90px;">
+                <div class="pure-u-1 animate__animated animate__fadeIn animate__fast" id="header">
+                    <h1 class="animate_animated animate_delay-1s">Signup</h1>
+                </div>
+                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" method="POST"
+                    class="pure-form pure-form-stacked pure-form-aligned" fxLayoutAlign="stretch" fxLayout="column">
+                    <div>
+                        <label>Enter your Username:</label>
+                        <input type="text" formControlName='username' class="field pure-u-1">
+                        <p *ngIf="registerForm.get('username')?.errors?.['required'] &&registerForm.get('username')?.touched"
+                            style="color: red;font-size: small;">Username is required</p>
+                        <p *ngIf="registerForm.get('username')?.errors?.['pattern'] && registerForm.get('username')?.touched"
+                            style="color: red;font-size: small;">Username can contain only alphanumeric and/or "_ , -"
+                            characters</p>
+                    </div>
+                    <div>
+                        <label>Enter your Email:</label>
+                        <input type="email" formControlName='email' class="field pure-u-1">
+                        <p *ngIf="registerForm.get('email')?.errors?.['required'] &&registerForm.get('email')?.touched"
+                            style="color: red;font-size: small;">Email is required</p>
+                        <p *ngIf="registerForm.get('email')?.errors?.['pattern'] &&registerForm.get('email')?.touched"
+                            style="color: red;font-size: small;">Invalid Email</p>
+                    </div>
+                    <div>
+                        <label>Enter your Password:</label>
+                        <input type="password" formControlName="password" class="field pure-u-1">
+                        <p *ngIf="registerForm.get('password')?.errors?.['required'] &&registerForm.get('password')?.touched"
+                            style="color: red;font-size: small;">Password is required</p>
+                    </div>
+                    <div>
+                        <label>Confirm your Password:</label>
+                        <input type="password" formControlName='confirmPassword' class="field pure-u-1">
+                        <p *ngIf="registerForm?.errors?.['mismatch'] && registerForm.get('confirmPassword')?.touched"
+                            style="color: red; font-size: small;">Passowrds do not match!</p>
+                    </div>
+                    <div class="animate__animated animate__fadeIn animate__faster">
+                        <button type="submit" [disabled]="registerForm.invalid"
+                            class="pure-button pure-u-1 button-success">Signup</button>
+                    </div>
+                </form>
+            </mat-card>
+            <div fxLayout="column" fxLayoutAlign="center center" fxFlex="25" style="margin-top: 30px;">
+                <p style="color:white;font-size: x-large;">Or</p>
+                <button class="pure-button button-success" routerLink="/login"
+                    style="background-color: transparent;color:lightseagreen;font-weight:500;font-size: 20px;margin-top: 10px;text-decoration: underline;">
+                    Already have an account? Log In</button>
             </div>
-            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" method="POST"
-                class="pure-form pure-form-stacked pure-form-aligned" fxLayoutAlign="stretch" fxLayout="column">
-                <div>
-                    <label>Enter your Username:</label>
-                    <input type="text" formControlName='username' class="field pure-u-1">
-                    <p *ngIf="registerForm.get('username')?.errors?.['required'] &&registerForm.get('username')?.touched"
-                        style="color: red;font-size: small;">Username is required</p>
-                    <p *ngIf="registerForm.get('username')?.errors?.['pattern'] && registerForm.get('username')?.touched"
-                        style="color: red;font-size: small;">Username can contain only alphanumeric and/or "_ , -"
-                        characters</p>
-                </div>
-                <div>
-                    <label>Enter your Email:</label>
-                    <input type="email" formControlName='email' class="field pure-u-1">
-                    <p *ngIf="registerForm.get('email')?.errors?.['required'] &&registerForm.get('email')?.touched"
-                        style="color: red;font-size: small;">Email is required</p>
-                    <p *ngIf="registerForm.get('email')?.errors?.['pattern'] &&registerForm.get('email')?.touched"
-                        style="color: red;font-size: small;">Invalid Email</p>
-                </div>
-                <div>
-                    <label>Enter your Password:</label>
-                    <input type="password" formControlName="password" class="field pure-u-1">
-                    <p *ngIf="registerForm.get('password')?.errors?.['required'] &&registerForm.get('password')?.touched"
-                        style="color: red;font-size: small;">Password is required</p>
-                </div>
-                <div>
-                    <label>Confirm your Password:</label>
-                    <input type="password" formControlName='confirmPassword' class="field pure-u-1">
-                    <p *ngIf="registerForm?.errors?.['mismatch'] && registerForm.get('confirmPassword')?.touched"
-                        style="color: red; font-size: small;">Passowrds do not match!</p>
-                </div>
-                <div class="animate__animated animate__fadeIn animate__faster">
-                    <button type="submit" [disabled]="registerForm.invalid"
-                        class="pure-button pure-u-1 button-success">Signup</button>
-                </div>
-            </form>
-        </mat-card>
+        </div>
     </div>
+    <ng-template #sessionExisting>
+        <div fxLayoutAlign="center center" fxFlexFill>
+            <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
+                <div style="text-align: center;">
+                    <h2>
+                        You are already Logged In
+                    </h2>
+                </div>
+                <div style="text-align: center;">
+                    <button class="pure-button button-success" routerLink="/admin">Go to application</button>
+                </div>
+            </mat-card>
+        </div>
+    </ng-template>
 </body>
